--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,7 @@
 	height: 34px;
 	border: 1px solid black;
 	border-radius: 6px;
-	background: #f7fffb;
-	background: -moz-linear-gradient(top,  #f7fffb 0%, #e3f7f2 100%);
-	background: -webkit-linear-gradient(top,  #f7fffb 0%,#e3f7f2 100%);
 	background: linear-gradient(to bottom,  #f7fffb 0%,#e3f7f2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7fffb', endColorstr='#e3f7f2',GradientType=0 );
 }
 
 .label {
@@ -78,9 +74,7 @@ label {
 	padding: 5px 8px 5px 8px;
 	background: #BDEFA0;
 	border-radius: 13px;
--webkit-box-shadow: 3px 3px 8px 0px rgba(75,219,142,1);
--moz-box-shadow: 3px 3px 8px 0px rgba(75,219,142,1);
-box-shadow: 3px 3px 8px 0px rgba(75,219,142,1);
+	box-shadow: 3px 3px 8px 0px rgba(75,219,142,1);
 }
 
 button {
@@ -94,4 +88,21 @@ button {
 
 .hide {
 	display: none;
+}
+
+.rabbid {
+	display: none;
+	position: fixed;
+	width: 340px;
+	height: 478px;
+}
+
+.close {
+	float: right;
+	margin: 8px;
+	text-decoration: none;
+	font-family: Arial, sans-serif;
+	font-size: 44px;
+	line-height: 44px;
+	color: pink;
 }
